--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,34 +1,37 @@
 $brand-primary: darken(#428bca, 6.5%); // #337ab7
 $brand-success: #5cb85c;
-$brand-info:    #5bc0de;
+$brand-info: #5bc0de;
 $brand-warning: #f0ad4e;
-$brand-danger:  #d9534f;
-
-$gray-darker:  lighten(#000, 13.5%); // #222
-$gray-dark:    lighten(#000, 20%);   // #333
-$gray:         lighten(#000, 33.5%); // #555
-$gray-light:   lighten(#000, 46.7%); // #777
+$brand-danger: #d9534f;
+$gray-darker: lighten(#000, 13.5%); // #222
+$gray-dark: lighten(#000, 20%);
+// #333
+$gray: lighten(#000, 33.5%); // #555
+$gray-light: lighten(#000, 46.7%); // #777
 $gray-lighter: lighten(#000, 93.5%); // #eee
-
 $glossary-text: #444;
+// .book .markdown-section {
+.glossary-term {
+  border-bottom: 1px lighten($glossary-text, 50) dotted;
+  color: $glossary-text;
+  cursor: help;
+  font-style: italic;
+  text-decoration: none;
 
-.book .markdown-section {
-  .glossary-term {
-    border-bottom: 1px lighten($glossary-text, 50) dotted;
-    color: $glossary-text;
-    cursor: help;
-    font-style: italic;
+  &:active,
+  &:focus,
+  &:hover {
+    border-bottom: 0;
     text-decoration: none;
-
-    &:active,
-    &:focus,
-    &:hover {
-      border-bottom: 0;
-      text-decoration: none;
-    }
-  }
-
-  .required {
-    color: $brand-warning;
   }
 }
+
+.required {
+  color: $brand-warning;
+}
+
+.hints-icon .fa {
+  font-size: 1.5em;
+  vertical-align: middle;
+}
+// }
