--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -309,3 +309,8 @@ a.btn.disabled,fieldset[disabled] a.btn {
 .btn-block+.btn-block {
     margin-top: 5px
 }
+
+.btn-info-reverse {
+    color: #29abe0;
+    background-color: #fff
+}
